--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.3.1",
     "firebase": "^9.17.2",
     "react": "^18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.9.0",
