--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.1",
     "bootstrap": "^5.2.3",
+    "file-saver": "^2.0.5",
     "firebase": "^9.17.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
